--- a/notebooks/4_ensemble-classification.ipynb
+++ b/notebooks/4_ensemble-classification.ipynb
@@ -21,10 +21,11 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import numpy as np\n",
     "from sklearn.metrics import confusion_matrix, classification_report, mean_squared_error, mean_absolute_error\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn import tree"
+    "from sklearn.tree import DecisionTreeClassifier"
    ]
   },
   {
@@ -148,14 +149,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 2 ms\n"
+      "Wall time: 231 ms\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": "{'max_depth': 11}"
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "%%time\n",
-    "clf = tree.DecisionTreeClassifier()\n",
-    "clf = clf.fit(X_train, y_train)"
+    "parameters_dtc = {'max_depth': np.arange(1,20,1)}\n",
+    "dtc = DecisionTreeClassifier()\n",
+    "dtc_base = GridSearchCV(dtc, parameters_dtc).fit(X_train, y_train)\n",
+    "dtc_base.best_params_"
    ],
    "metadata": {
     "collapsed": false,
@@ -172,19 +183,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[240   2   0   0]\n",
-      " [  1  75   2   0]\n",
-      " [  1   0  11   0]\n",
+      "[[259   1   0   0]\n",
+      " [  0  57   3   1]\n",
+      " [  0   1  10   0]\n",
       " [  0   0   0  14]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.99      0.99      0.99       242\n",
-      "           2       0.97      0.96      0.97        78\n",
-      "           3       0.85      0.92      0.88        12\n",
-      "           4       1.00      1.00      1.00        14\n",
+      "           1       1.00      1.00      1.00       260\n",
+      "           2       0.97      0.93      0.95        61\n",
+      "           3       0.77      0.91      0.83        11\n",
+      "           4       0.93      1.00      0.97        14\n",
       "\n",
       "    accuracy                           0.98       346\n",
-      "   macro avg       0.95      0.97      0.96       346\n",
+      "   macro avg       0.92      0.96      0.94       346\n",
       "weighted avg       0.98      0.98      0.98       346\n",
       "\n",
       "0.9826589595375722\n"
@@ -192,7 +203,41 @@
     }
    ],
    "source": [
-    "print_classification_model_metrics(clf, y_test, clf.predict(X_test))"
+    "print_classification_model_metrics(dtc_base, y_test, dtc_base.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Бэггинг"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "UsageError: %%time is a cell magic, but the cell body is empty. Did you mean the line magic %time (single %)?\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time"
    ],
    "metadata": {
     "collapsed": false,
