--- a/notebooks/4_ensemble-classification.ipynb
+++ b/notebooks/4_ensemble-classification.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -22,15 +22,19 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
+    "import warnings\n",
     "from sklearn.metrics import confusion_matrix, classification_report, mean_squared_error, mean_absolute_error\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier\n",
+    "\n",
+    "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "outputs": [],
    "source": [
     "data = pd.read_csv(r'../data/car-evaluation_preprocessed.csv', sep=',')"
@@ -44,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "outputs": [
     {
      "data": {
       "text/plain": "      buying  maint  doors  persons  lug_boot  safety  class\n0          4      4      2        2         1       1      1\n1          4      4      2        2         1       2      1\n2          4      4      2        2         1       3      1\n3          4      4      2        2         2       1      1\n4          4      4      2        2         2       2      1\n...      ...    ...    ...      ...       ...     ...    ...\n1723       1      1      5        5         2       2      3\n1724       1      1      5        5         2       3      4\n1725       1      1      5        5         3       1      1\n1726       1      1      5        5         3       2      3\n1727       1      1      5        5         3       3      4\n\n[1728 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>buying</th>\n      <th>maint</th>\n      <th>doors</th>\n      <th>persons</th>\n      <th>lug_boot</th>\n      <th>safety</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1723</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1724</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>2</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1725</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1726</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1727</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n<p>1728 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 3,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "outputs": [],
    "source": [
     "X = data.iloc[:, :-1].values\n",
@@ -83,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "outputs": [],
    "source": [
     "\n",
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
@@ -114,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "outputs": [],
    "source": [
     "def print_classification_model_metrics(estimator, y_test, y_pred):\n",
@@ -143,20 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 231 ms\n"
+      "Wall time: 300 ms\n"
      ]
     },
     {
      "data": {
       "text/plain": "{'max_depth': 11}"
      },
-     "execution_count": 8,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,33 +181,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 134,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[259   1   0   0]\n",
-      " [  0  57   3   1]\n",
-      " [  0   1  10   0]\n",
-      " [  0   0   0  14]]\n",
+      "[[236   1   0   0]\n",
+      " [  5  73   2   2]\n",
+      " [  0   0  14   0]\n",
+      " [  0   1   0  12]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       1.00      1.00      1.00       260\n",
-      "           2       0.97      0.93      0.95        61\n",
-      "           3       0.77      0.91      0.83        11\n",
-      "           4       0.93      1.00      0.97        14\n",
+      "           1       0.98      1.00      0.99       237\n",
+      "           2       0.97      0.89      0.93        82\n",
+      "           3       0.88      1.00      0.93        14\n",
+      "           4       0.86      0.92      0.89        13\n",
       "\n",
-      "    accuracy                           0.98       346\n",
-      "   macro avg       0.92      0.96      0.94       346\n",
-      "weighted avg       0.98      0.98      0.98       346\n",
+      "    accuracy                           0.97       346\n",
+      "   macro avg       0.92      0.95      0.93       346\n",
+      "weighted avg       0.97      0.97      0.97       346\n",
       "\n",
-      "0.9826589595375722\n"
+      "0.9682080924855492\n"
      ]
     }
    ],
    "source": [
     "print_classification_model_metrics(dtc_base, y_test, dtc_base.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "ensemble params"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "outputs": [],
+   "source": [
+    "parameters_ensemble = {'n_estimators': np.arange(0,100,5),\n",
+    "                       'max_features': np.arange(1,24,3)}"
    ],
    "metadata": {
     "collapsed": false,
@@ -226,18 +257,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "UsageError: %%time is a cell magic, but the cell body is empty. Did you mean the line magic %time (single %)?\n"
+      "Wall time: 25.3 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'max_features': 4, 'n_estimators': 25}"
+     },
+     "execution_count": 136,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "bag = BaggingClassifier(base_estimator=DecisionTreeClassifier(max_depth=dtc_base.best_params_['max_depth']))\n",
+    "model = GridSearchCV(bag, parameters_ensemble).fit(X_train, y_train)\n",
+    "model.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[237   0   0   0]\n",
+      " [ 26  56   0   0]\n",
+      " [  1   9   2   2]\n",
+      " [  1   4   0   8]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.89      1.00      0.94       237\n",
+      "           2       0.81      0.68      0.74        82\n",
+      "           3       1.00      0.14      0.25        14\n",
+      "           4       0.80      0.62      0.70        13\n",
+      "\n",
+      "    accuracy                           0.88       346\n",
+      "   macro avg       0.88      0.61      0.66       346\n",
+      "weighted avg       0.88      0.88      0.86       346\n",
+      "\n",
+      "0.8757225433526011\n"
      ]
     }
    ],
    "source": [
-    "%%time"
+    "print_classification_model_metrics(model, y_test, model.predict(X_test))"
    ],
    "metadata": {
     "collapsed": false,
