lab4 - classification boosting

--- a/notebooks/4_ensemble-classification.ipynb
+++ b/notebooks/4_ensemble-classification.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 139,
    "metadata": {
     "collapsed": true
    },
@@ -27,7 +27,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import BaggingClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier, GradientBoostingClassifier\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
@@ -312,6 +312,85 @@
       "weighted avg       0.88      0.88      0.86       346\n",
       "\n",
       "0.8757225433526011\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_classification_model_metrics(model, y_test, model.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Бустинг"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 140,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1min 4s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'max_features': 4, 'n_estimators': 95}"
+     },
+     "execution_count": 140,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "gbc = GradientBoostingClassifier()\n",
+    "model = GridSearchCV(gbc, parameters_ensemble).fit(X_train, y_train)\n",
+    "model.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[237   0   0   0]\n",
+      " [  1  78   1   2]\n",
+      " [  0   0  12   2]\n",
+      " [  0   0   0  13]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       1.00      1.00      1.00       237\n",
+      "           2       1.00      0.95      0.97        82\n",
+      "           3       0.92      0.86      0.89        14\n",
+      "           4       0.76      1.00      0.87        13\n",
+      "\n",
+      "    accuracy                           0.98       346\n",
+      "   macro avg       0.92      0.95      0.93       346\n",
+      "weighted avg       0.99      0.98      0.98       346\n",
+      "\n",
+      "0.9826589595375722\n"
      ]
     }
    ],
