--- a/notebooks/4_ensemble-classification.ipynb
+++ b/notebooks/4_ensemble-classification.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -27,14 +27,14 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import BaggingClassifier, GradientBoostingClassifier\n",
+    "from sklearn.ensemble import BaggingClassifier, GradientBoostingClassifier, StackingClassifier\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 2,
    "outputs": [],
    "source": [
     "data = pd.read_csv(r'../data/car-evaluation_preprocessed.csv', sep=',')"
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 3,
    "outputs": [
     {
      "data": {
       "text/plain": "      buying  maint  doors  persons  lug_boot  safety  class\n0          4      4      2        2         1       1      1\n1          4      4      2        2         1       2      1\n2          4      4      2        2         1       3      1\n3          4      4      2        2         2       1      1\n4          4      4      2        2         2       2      1\n...      ...    ...    ...      ...       ...     ...    ...\n1723       1      1      5        5         2       2      3\n1724       1      1      5        5         2       3      4\n1725       1      1      5        5         3       1      1\n1726       1      1      5        5         3       2      3\n1727       1      1      5        5         3       3      4\n\n[1728 rows x 7 columns]",
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>buying</th>\n      <th>maint</th>\n      <th>doors</th>\n      <th>persons</th>\n      <th>lug_boot</th>\n      <th>safety</th>\n      <th>class</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>3</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>4</td>\n      <td>4</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>2</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1723</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>2</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1724</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>2</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n    <tr>\n      <th>1725</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>1</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>1726</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>2</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>1727</th>\n      <td>1</td>\n      <td>1</td>\n      <td>5</td>\n      <td>5</td>\n      <td>3</td>\n      <td>3</td>\n      <td>4</td>\n    </tr>\n  </tbody>\n</table>\n<p>1728 rows × 7 columns</p>\n</div>"
      },
-     "execution_count": 128,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 4,
    "outputs": [],
    "source": [
     "X = data.iloc[:, :-1].values\n",
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 5,
    "outputs": [],
    "source": [
     "\n",
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 6,
    "outputs": [],
    "source": [
     "scaler = StandardScaler()\n",
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 7,
    "outputs": [],
    "source": [
     "def print_classification_model_metrics(estimator, y_test, y_pred):\n",
@@ -147,20 +147,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 8,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 300 ms\n"
+      "Wall time: 236 ms\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'max_depth': 11}"
+      "text/plain": "{'max_depth': 17}"
      },
-     "execution_count": 133,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,28 +181,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 9,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[236   1   0   0]\n",
-      " [  5  73   2   2]\n",
-      " [  0   0  14   0]\n",
-      " [  0   1   0  12]]\n",
+      "[[235   3   0   0]\n",
+      " [  4  66   3   1]\n",
+      " [  1   0  16   1]\n",
+      " [  0   0   0  16]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.98      1.00      0.99       237\n",
-      "           2       0.97      0.89      0.93        82\n",
-      "           3       0.88      1.00      0.93        14\n",
-      "           4       0.86      0.92      0.89        13\n",
+      "           1       0.98      0.99      0.98       238\n",
+      "           2       0.96      0.89      0.92        74\n",
+      "           3       0.84      0.89      0.86        18\n",
+      "           4       0.89      1.00      0.94        16\n",
       "\n",
-      "    accuracy                           0.97       346\n",
-      "   macro avg       0.92      0.95      0.93       346\n",
-      "weighted avg       0.97      0.97      0.97       346\n",
+      "    accuracy                           0.96       346\n",
+      "   macro avg       0.92      0.94      0.93       346\n",
+      "weighted avg       0.96      0.96      0.96       346\n",
       "\n",
-      "0.9682080924855492\n"
+      "0.9624277456647399\n"
      ]
     }
    ],
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 10,
    "outputs": [],
    "source": [
     "parameters_ensemble = {'n_estimators': np.arange(0,100,5),\n",
@@ -257,20 +257,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 11,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 25.3 s\n"
+      "Wall time: 25.5 s\n"
      ]
     },
     {
      "data": {
-      "text/plain": "{'max_features': 4, 'n_estimators': 25}"
+      "text/plain": "{'max_features': 4, 'n_estimators': 45}"
      },
-     "execution_count": 136,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,28 +290,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 12,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[237   0   0   0]\n",
-      " [ 26  56   0   0]\n",
-      " [  1   9   2   2]\n",
-      " [  1   4   0   8]]\n",
+      "[[238   0   0   0]\n",
+      " [ 22  52   0   0]\n",
+      " [  1  17   0   0]\n",
+      " [  0   9   0   7]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       0.89      1.00      0.94       237\n",
-      "           2       0.81      0.68      0.74        82\n",
-      "           3       1.00      0.14      0.25        14\n",
-      "           4       0.80      0.62      0.70        13\n",
+      "           1       0.91      1.00      0.95       238\n",
+      "           2       0.67      0.70      0.68        74\n",
+      "           3       0.00      0.00      0.00        18\n",
+      "           4       1.00      0.44      0.61        16\n",
       "\n",
-      "    accuracy                           0.88       346\n",
-      "   macro avg       0.88      0.61      0.66       346\n",
-      "weighted avg       0.88      0.88      0.86       346\n",
+      "    accuracy                           0.86       346\n",
+      "   macro avg       0.64      0.54      0.56       346\n",
+      "weighted avg       0.82      0.86      0.83       346\n",
       "\n",
-      "0.8757225433526011\n"
+      "0.8583815028901735\n"
      ]
     }
    ],
@@ -336,20 +336,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 13,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Wall time: 1min 4s\n"
+      "Wall time: 1min\n"
      ]
     },
     {
      "data": {
       "text/plain": "{'max_features': 4, 'n_estimators': 95}"
      },
-     "execution_count": 140,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,28 +369,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[237   0   0   0]\n",
-      " [  1  78   1   2]\n",
-      " [  0   0  12   2]\n",
-      " [  0   0   0  13]]\n",
+      "[[236   2   0   0]\n",
+      " [  0  70   3   1]\n",
+      " [  0   0  18   0]\n",
+      " [  0   0   0  16]]\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           1       1.00      1.00      1.00       237\n",
-      "           2       1.00      0.95      0.97        82\n",
-      "           3       0.92      0.86      0.89        14\n",
-      "           4       0.76      1.00      0.87        13\n",
+      "           1       1.00      0.99      1.00       238\n",
+      "           2       0.97      0.95      0.96        74\n",
+      "           3       0.86      1.00      0.92        18\n",
+      "           4       0.94      1.00      0.97        16\n",
       "\n",
       "    accuracy                           0.98       346\n",
-      "   macro avg       0.92      0.95      0.93       346\n",
-      "weighted avg       0.99      0.98      0.98       346\n",
+      "   macro avg       0.94      0.98      0.96       346\n",
+      "weighted avg       0.98      0.98      0.98       346\n",
       "\n",
       "0.9826589595375722\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_classification_model_metrics(model, y_test, model.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Стекинг"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 4.71 s\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "model = StackingClassifier(estimators=[('bag',bag), ('gbc',gbc)],\n",
+    "                           final_estimator=dtc_base).fit(X_train, y_train)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[238   0   0   0]\n",
+      " [  1  72   1   0]\n",
+      " [  0   1  17   0]\n",
+      " [  0   1   1  14]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       1.00      1.00      1.00       238\n",
+      "           2       0.97      0.97      0.97        74\n",
+      "           3       0.89      0.94      0.92        18\n",
+      "           4       1.00      0.88      0.93        16\n",
+      "\n",
+      "    accuracy                           0.99       346\n",
+      "   macro avg       0.97      0.95      0.96       346\n",
+      "weighted avg       0.99      0.99      0.99       346\n",
+      "\n",
+      "0.9855491329479769\n"
      ]
     }
    ],
