lab4 - regression bagging

--- a/notebooks/4_ensemble-regression.ipynb
+++ b/notebooks/4_ensemble-regression.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -24,6 +24,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ],
@@ -208,6 +209,104 @@
     "pycharm": {
      "name": "#%%\n"
     }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "ensemble params"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "outputs": [],
+   "source": [
+    "parameters_ensemble = {'n_estimators': np.arange(0,100,5),\n",
+    "                       'max_features': np.arange(1,24,3)}"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Бэггинг"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1min 5s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'max_features': 16, 'n_estimators': 45}"
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "bag = BaggingRegressor(base_estimator=DecisionTreeRegressor(max_depth=dtr_base.best_params_['max_depth']))\n",
+    "model = GridSearchCV(bag, parameters_ensemble).fit(X_train, y_train)\n",
+    "model.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Коэффициент детерминации: 0.03649185990221715\n",
+      "MSE: 592.8020683906738\n",
+      "RMSE: 24.347526946091953\n",
+      "MAE: 17.28946647496553\n"
+     ]
+    }
+   ],
+   "source": [
+    "print_regression_model_metrics(model, y_test, model.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [],
+   "metadata": {
+    "collapsed": false
    }
   }
  ],
