--- a/notebooks/4_ensemble-regression.ipynb
+++ b/notebooks/4_ensemble-regression.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -24,7 +24,7 @@
     "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.tree import DecisionTreeRegressor\n",
-    "from sklearn.ensemble import BaggingRegressor\n",
+    "from sklearn.ensemble import BaggingRegressor, GradientBoostingRegressor\n",
     "\n",
     "warnings.filterwarnings(\"ignore\")"
    ],
@@ -246,24 +246,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Wall time: 1min 5s\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "{'max_features': 16, 'n_estimators': 45}"
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "%%time\n",
     "bag = BaggingRegressor(base_estimator=DecisionTreeRegressor(max_depth=dtr_base.best_params_['max_depth']))\n",
@@ -279,16 +263,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print_regression_model_metrics(model, y_test, model.predict(X_test))"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "# Бустинг"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Коэффициент детерминации: 0.03649185990221715\n",
-      "MSE: 592.8020683906738\n",
-      "RMSE: 24.347526946091953\n",
-      "MAE: 17.28946647496553\n"
+      "Wall time: 14 s\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": "{'max_features': 4, 'n_estimators': 85}"
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "gbc = GradientBoostingRegressor()\n",
+    "model = GridSearchCV(gbc, parameters_ensemble).fit(X_train, y_train)\n",
+    "model.best_params_"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Коэффициент детерминации: 0.1937542028342517\n",
+      "MSE: 390.47253046259\n",
+      "RMSE: 19.760377791494523\n",
+      "MAE: 12.060433643421197\n"
      ]
     }
    ],
